plugins {
    id 'net.fabricmc.fabric-loom' version '1.15-SNAPSHOT'
    id 'com.gradleup.shadow' version '9.3.1'
    id 'maven-publish'
}

version = project.mod_version + "+" + project.minecraft_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

loom {
    accessWidenerPath = file("src/main/resources/filament.accesswidener")
}

configurations {
    shade
    implementation.extendsFrom(shade)
}

repositories {
    maven { url 'https://maven.tomalbrc.de' }
    maven { url 'https://maven.nucleoid.xyz' }
    maven { url 'https://maven.parchmentmc.org' }
    maven { url = 'https://api.modrinth.com/maven' }
    maven { url 'https://maven.blamejared.com' }
    mavenLocal()
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    implementation("net.fabricmc:fabric-loader:${project.loader_version}")
    implementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}")

    // Polymer
    implementation("eu.pb4:polymer-core:${project.polymer_version}")
    implementation("eu.pb4:polymer-blocks:${project.polymer_version}")
    implementation("eu.pb4:polymer-resource-pack:${project.polymer_version}")
    implementation("eu.pb4:polymer-resource-pack-extras:${project.polymer_version}")
    implementation("eu.pb4:polymer-virtual-entity:${project.polymer_version}")
    implementation("eu.pb4:polymer-networking:${project.polymer_version}")
    implementation("eu.pb4:polymer-autohost:${project.polymer_version}")
    implementation("eu.pb4:polymer-sound-patcher:${project.polymer_version}")
    implementation include("eu.pb4:sgui:${project.sgui_version}")
    implementation include('me.lucko:fabric-permissions-api:0.7.0')

    // BIL
    implementation include("de.tomalbrc:blockbench-import-library:${project.bil_version}")

    // Text format
    implementation include("eu.pb4:placeholder-api:${project.papi_version}")
    //implementation include("net.kyori:adventure-platform-fabric:${project.adventure_platform_version}")
    //implementation include("net.kyori:adventure-text-minimessage:${project.adventure_api_version}")
    //implementation("net.kyori:adventure-api:${project.adventure_api_version}")

    shade('org.yaml:snakeyaml:2.4')

    shade 'org.eclipse.jetty:jetty-server:12.1.6'
    shade 'org.eclipse.jetty.ee10.websocket:jetty-ee10-websocket-jakarta-server:12.1.6'
    shade 'com.github.victools:jsonschema-generator:4.35.0'
    shade 'com.j2html:j2html:1.6.0'
    shade 'org.json:json:20231013'

    // claim compat
    implementation include("eu.pb4:common-protection-api:2.0.0")
}

tasks.jar {
    dependsOn shadowJar
    from(zipTree(shadowJar.archiveFile)) {
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
        exclude 'META-INF/*.SF'
        exclude 'META-INF/*.DSA'
        exclude 'META-INF/*.RSA'
        exclude 'META-INF/maven/**'
    }
}

shadowJar {
    configurations = [project.configurations.shade]

    def relocations = [
            "org.eclipse.jetty"  : "jetty",
            "com.github.victools": "jsonschema",
            "com.j2html"         : "j2html",
            "org.json"           : "orgjson"
    ]

    relocations.each { prop, target ->
        relocate prop, "de.tomalbrc.filament.libs.${target}"
    }

    dependencies {
        exclude(dependency('org.ow2.asm:.*'))
        exclude(dependency('com.google.guava:guava:.*'))
        exclude(dependency('com.google.code.gson:gson:.*'))
        exclude(dependency('org.apache.commons:commons-lang3:.*'))
    }
}

processResources {
    inputs.property "version", project.version
    inputs.property "minecraft_version", project.minecraft_version
    inputs.property "loader_version", project.loader_version
    filteringCharset "UTF-8"

    filesMatching("fabric.mod.json") {
        expand "version": project.version,
                "minecraft_version": project.minecraft_version,
                "bil_version": project.bil_version,
                "polymer_version": project.polymer_version,
                "loader_version": project.loader_version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release.set(25)
}

java {
    withSourcesJar()
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.archives_base_name}" }
    }
}

// configure the maven publication
publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }

    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
    repositories {
        mavenLocal()
    }
}
